data/derived/comb/progs/unify/prog8141.ml.out
Characters 36-48:
  let stringOfList f l = f (sepConcat (List.map l));;
                                      ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string
